# snake-game-recreation

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: assets.h  collision.c  collision.h  config.c  config.h  food.c  food.h  game.c  game.h  gen_assets.c  gen_assets.ps1  log.c  log.h  main.c  obstacle.c  obstacle.h  ping_pong.c  raylib_api.c  raylib_api.h  result.h  run.bat  score.c  score.h  snake.c  snake.h
test/: test_collision.c  unity.h
